--- a/style.css
+++ b/style.css
@@ -32,5 +32,8 @@
     border-radius: 1rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: white;
-    border: 1px solid #8e8a8a;
+    border: 1px solid #cbcaca;
+}
+.listItem:hover {
+    transform: scale(101%);
 }
